In this case can deone without useMemo

--- a/index.css
+++ b/index.css
@@ -52,3 +52,11 @@
 .con {
     display: flex;
 }
+
+.containerMemo{
+    background-color: red;
+}
+
+.themechange {
+    background-color: aqua;
+}
